# product-manager-bot

./: .env.EXAMPLE  .gitignore  cache.py  main.py  pyproject.toml
bots/discord_bot/: __init__.py  discord_bot_main.py
bots/discord_bot/commands/: __init__.py  ping.py  send_report.py
bots/discord_bot/components/: __init__.py  binary_buttons.py  binary_buttons_component.py  dynamic_buttons.py  dynamic_buttons_component.py  multi_select_list_component.py  single_select_list_component.py  text_input_modal_component.py
bots/discord_bot/flows/: __init__.py  flow_manager.py  flow_not_productive.py  flow_personal_issues.py  flow_start.py  inside_pendency_flow.py  manager_flow.py  not_productive_flow.py  pendency_flow.py  personal_issues_flow.py  start_flow.py
bots/discord_bot/services/: __init__.py  message_service.py  question_service.py  send_timely_message_service.py  user_service.py  written_answer_service.py
bots/discord_bot/services/question_answer_types_subservices/: __init__.py  binary_answer_subservice.py  dynamic_answer_subservice.py  list_multi_select_answer_subservice.py  list_single_select_answer_subservice.py  written_answer_subservice.py
bots/discord_bot/utils/: __init__.py  message_handler.py  time_utils.py
bots/telegram_bot/: __init__.py  simple.py  telegram_bot.py
tests/commands/: test_discord.py  test_telegram.py
